--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     networks:
       local-network:
         ipv4_address: 172.16.238.54
-        ipv6_address: 2001:3984:3989::54
+        #ipv6_address: 2001:3984:3989::54
     ports:
     - "${SERVER_PORT:-6379}:6379"
     volumes:
@@ -26,7 +26,7 @@ networks:
       driver: default
       config:
       - subnet: 172.16.238.0/24
-      - subnet: 2001:3984:3989::/64
+      #- subnet: 2001:3984:3989::/64
 
 volumes:
   data:
