--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -10,3 +10,4 @@ services:
       - IMAGE_ARG_IMAGE_TAG=${IMAGE_ARG_IMAGE_TAG:-3.0.6}
       - IMAGE_ARG_VERSION=${IMAGE_ARG_VERSION:-3.0.6}
     image: ${IMAGE_PREFIX:-cloudready/}${IMAGE_NAME:-redis}:${IMAGE_TAG:-3.0.6-SNAPSHOT}
+    restart: always
