--- a/docker-compose_redis.yml
+++ b/docker-compose_redis.yml
@@ -10,6 +10,7 @@ services:
     hostname: ${CONTAINER_HOST_NAME:-redis}
     ports:
     - "${SERVER_PORT:-6379}:6379"
+    restart: always
     volumes:
     - data:/data
 
