--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -10,4 +10,12 @@ services:
       - IMAGE_ARG_IMAGE_TAG=${IMAGE_ARG_IMAGE_TAG:-3.0.6}
       - IMAGE_ARG_VERSION=${IMAGE_ARG_VERSION:-3.0.6}
     image: ${IMAGE_PREFIX:-cloudready/}${IMAGE_NAME:-redis}:${IMAGE_TAG:-3.0.6-SNAPSHOT}
+    labels:
+      deploy.config.commit: ${LABEL_DEPLOY_CONFIG_COMMIT:-unknown}
+      deploy.config.name: ${LABEL_DEPLOY_CONFIG_NAME:-unknown}
+      deploy.config.ref: ${LABEL_DEPLOY_CONFIG_REF:-unknown}
+      deploy.util.commit: ${LABEL_DEPLOY_UTIL_COMMIT:-unknown}
+      deploy.util.ref: ${LABEL_DEPLOY_UTIL_REF:-unknown}
+      instance.name.short: ${LABEL_INSTANCE_NAME_SHORT:-standalone.redis}
+      instance.name: ${LABEL_INSTANCE_NAME:-127.0.0.1/redis/standalone}
     restart: always
