--- a/docker-compose_redis-sentinel.yml
+++ b/docker-compose_redis-sentinel.yml
@@ -15,10 +15,10 @@ services:
     network_mode: "host"
 #    networks:
 #      local-network:
-#        ipv4_address: 172.16.238.47
-#        ipv6_address: 2001:3984:3989::47
+#        ipv4_address: ${IPV4_ADDRESS:-172.16.238.47}
+#        ipv6_address: ${IPV6_ADDRESS:-2001:3984:3989::47}
     ports:
-    - "6379:6379"
+    - "${EXTERNAL_REDIS_6379_PORT:-6379}:6379"
     restart: always
     volumes:
     - data-master:/data
@@ -43,8 +43,8 @@ services:
     network_mode: "host"
 #    networks:
 #      local-network:
-#        ipv4_address: 172.16.238.49
-#        ipv6_address: 2001:3984:3989::49
+#        ipv4_address: ${IPV4_ADDRESS:-172.16.238.49}
+#        ipv6_address: ${IPV6_ADDRESS:-2001:3984:3989::49}
     ports:
     - "${SENTINEL_PORT:-26379}:26379"
     restart: always
@@ -63,8 +63,8 @@ services:
     network_mode: "host"
 #    networks:
 #      local-network:
-#        ipv4_address: 172.16.238.52
-#        ipv6_address: 2001:3984:3989::52
+#        ipv4_address: ${IPV4_ADDRESS:-172.16.238.52}
+#        ipv6_address: ${IPV6_ADDRESS:-2001:3984:3989::52}
     ports:
     - "6381:6381"
     restart: always
