--- a/docker-compose_redis.yml
+++ b/docker-compose_redis.yml
@@ -5,7 +5,7 @@ services:
     extends:
       file: docker-compose-base.yml
       service: base-redis
-    command: redis-server --requirepass ${REDIS_PASSWORD:-redis_pass} #remove this line if no password required
+    command: redis-server --requirepass ${REDIS_PASSWORD:-admin_pass} #remove this line if no password required
     container_name: ${CONTAINER_HOST_NAME:-standalone.redis}
     hostname: ${CONTAINER_HOST_NAME:-standalone.redis}
     labels:
